# telegram-crypto-sentiment-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bot/: __init__.py  handlers.py  scheduler.py  utils.py
data/: __init__.py  models.py  reddit.py  sentiment.py
docs/: development-chat.md
tests/: conftest.py  test_config.py  test_handlers.py  test_models.py  test_reddit.py  test_scheduler.py  test_sentiment.py  test_utils.py
